# Thalassa

./: .gitignore  .prettierrc  CHAT_SETUP.md  README.md  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: package.json  pyproject.toml
apps/api/src/thalassa_api/: main.py
apps/dbpy/: main.py  package.json  pyproject.toml
apps/dbpy/utils/: graph.py
apps/llm/: app.py  config.py  data_load.ipynb  package.json  pyproject.toml  rough.py  rough_data_queries.ipynb  server.py  test.ipynb
apps/web/: .env.local  .env.local.example  ANIMATIONS.md  HAPTIC_SYSTEM.md  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: coastlines_only_50m.geojson  earth-topo.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/components/: AnimatedLoader.tsx  AnimationInitializer.tsx  CameraFocus.tsx  DarkModeToggle.tsx  DynamicCamera.tsx  MapViewer.tsx  Navigation.tsx  ThemeProvider.tsx  TimeControls.tsx
apps/web/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessages.tsx  ChatSidebar.tsx  MarkdownRenderer.tsx  README.md
apps/web/src/components/flatmap/: DynamicCamera.tsx  MapViewer.tsx  UnifiedScene.tsx  ViewToggle.tsx
apps/web/src/components/floats/: FloatDossier.tsx  FloatDots.tsx
apps/web/src/hooks/: useAnimatedHaptic.ts  useAnimations.ts  useSpeechToText.ts
apps/web/src/services/: chatService.ts
apps/web/src/styles/: chat.css  dossier.css  globe.css  view-toggle.css
apps/web/src/types/: chat.ts
tests/web/: package.json
(+4 files in other folders)
