[project]
name = "thalassa-api"
version = "0.1.0"
description = "FastAPI backend for Thalassa ocean data exploration"
authors = [
    {name = "Thalassa Team"}
]
dependencies = [
    #    "fastapi>=0.104.0",
    #    "uvicorn[standard]>=0.24.0",
    #    "pydantic>=2.4.0",
    #    "python-multipart>=0.0.6",
    #    "httpx>=0.25.0",
    #    "python-dotenv>=1.0.0"
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
#    "pytest>=7.4.0",
#    "pytest-asyncio>=0.21.0",
#    "black>=23.9.0",
#    "isort>=5.12.0",
#    "flake8>=6.1.0",
#    "mypy>=1.6.0"
]
